fixed the white space in between footer and container

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,9 +20,9 @@
 body {
   background-image: url("client/src/Assets/Images/insulterator-background-image.jpg");
   margin: 0;
+  overflow: auto !important;
 }
 
 .container {
-  margin: 0;
-  overflow: auto;
+  size: 100%;
 }
