--- a/client/src/containers/Contact/Contact.css
+++ b/client/src/containers/Contact/Contact.css
@@ -41,6 +41,7 @@
   text-align: center;
   width: 95%;
   font-family: "Lato", sans-serif;
+  height: 800px;
 }
 #contact-div {
   margin-right: 25%;
