--- a/client/src/containers/Dashboard/Dashboard.css
+++ b/client/src/containers/Dashboard/Dashboard.css
@@ -5,3 +5,7 @@ h5 {
 .btn {
   width: auto !important;
 }
+
+/* #dashboard-container {
+  height: 800px;
+} */
