--- a/client/src/containers/UpdateProfile/UpdateProfile.css
+++ b/client/src/containers/UpdateProfile/UpdateProfile.css
@@ -11,6 +11,7 @@ ul {
 .container {
   padding: 20px;
   margin: 20px;
+  height: 800px;
 }
 
 @media only screen and (max-width: 375px) {
